--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <a href="connect.html">
     <header>
       <nav>
+        <h1 class="mainStatusText_2">スマホでVR</h1>
         <div class="nav_set nav_conts">
           <img src="img/set_img.png" width="100" height="100">
           <p>設定</p>
