--- a/connect.html
+++ b/connect.html
@@ -9,6 +9,7 @@
     <a href="connect.html">
     <header>
       <nav>
+        <h1 class="mainStatusText_2">スマホでVR</h1>
         <a href="index.html">
           <div class="nav_quit nav_conts">
             <p>切断する</p>
