--- a/index.html
+++ b/index.html
@@ -2,30 +2,38 @@
 <html lang="ja" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>VR</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>スマホでVR</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
   </head>
 
-  <body class="noconectbg">
-    <a href="connect.html">
-    <header>
-      <nav>
-        <h1 class="mainStatusText_2">スマホでVR</h1>
-        <div class="nav_set nav_conts">
-          <img src="img/set_img.png" width="100" height="100">
-          <p>設定</p>
-        </div>
+  <body class="vr-app-body disconnected-state backcolor-a" oncontextmenu="return false;">
+    <header class="app-header">
+      <nav class="main-nav">
+        <h1 class="app-title">スマホでVR</h1>
+        <a href="settings.html" class="nav-item settings-btn">
+          <img src="img/set_img.png" alt="設定アイコン" class="nav-icon">
+          <p class="nav-text">設定</p>
+        </a>
       </nav>
     </header>
 
-    <main>
-      <h1 class="mainStatusText">PCに接続してください</h1>
+    <main class="main-content">
+      <a href="connect.html" class="main-a">
+      <div class="status-display">
+        <h2 id="connectionStatusText" class="status-message">PCに接続してください</h2>
+        <p class="instruction-text">USBケーブルでPCとスマートフォンを接続してください。<br>これはプロトタイプのため、この枠をクリックすると次進みます。</p>
+      </div>
+      </a>
     </main>
 
-    <footer>
-      <img src="img/noConnect.png" class="connectImg">
+    <footer class="app-footer">
+      <div class="connection-image-wrapper">
+        <img src="img/noConnect.png" alt="未接続の状態を示す画像" id="connectionImage" class="connection-image">
+      </div>
     </footer>
 
-    </a>
+    <script src="script.js"></script>
   </body>
 </html>
